nav logo - safari header img gap fix ?

--- a/src/App.scss
+++ b/src/App.scss
@@ -63,7 +63,6 @@ nav {
   position: fixed;
   align-self: center;
   left: 0;
-  top: 15vh;
   width: 100vw;
 }
 
@@ -74,7 +73,9 @@ nav ul {
   align-self: center;
 }
 
-nav li{ //18vh
+nav li{ 
+  padding:auto;
+  padding-top: 15vh;
   padding-bottom: 0;
   list-style: none;
   text-align: center;
@@ -83,6 +84,7 @@ nav li{ //18vh
   display: inline-flex;
   flex-basis: 100%;
   flex-grow: 1;
+  background-color: #a8c4e6;
   text-decoration: none;
 
   a {
